[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menus/Arcade/Arcade_Bottom_HUD.gd" type="Script" id=1]
[ext_resource path="res://misc/line-text.tres" type="DynamicFont" id=2]

[node name="Arcade_Bottom_HUD" type="HBoxContainer"]
margin_top = 998.0
margin_right = 1912.0
margin_bottom = 1261.0
script = ExtResource( 1 )

[node name="VBoxContainer7" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_right = 235.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank7" type="Label" parent="VBoxContainer7"]
visible = false
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_7" type="Label" parent="VBoxContainer7"]
margin_right = 235.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "player 7"
align = 1

[node name="Label_ready7" type="Label" parent="VBoxContainer7"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ready!"
align = 1

[node name="Label_press_start" type="Label" parent="VBoxContainer7"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="Label_insert_coin" type="Label" parent="VBoxContainer7"]
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer7"]
margin_top = 82.0
margin_right = 235.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer5" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 239.0
margin_right = 474.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank5" type="Label" parent="VBoxContainer5"]
visible = false
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_5" type="Label" parent="VBoxContainer5"]
margin_right = 235.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "player 5"
align = 1

[node name="Label_ready5" type="Label" parent="VBoxContainer5"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ready!"
align = 1

[node name="Label_press_start" type="Label" parent="VBoxContainer5"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="Label_insert_coin" type="Label" parent="VBoxContainer5"]
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer5"]
margin_top = 82.0
margin_right = 235.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 478.0
margin_right = 713.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank3" type="Label" parent="VBoxContainer3"]
visible = false
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_3" type="Label" parent="VBoxContainer3"]
margin_right = 235.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "player 3"
align = 1

[node name="Label_ready3" type="Label" parent="VBoxContainer3"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ready!"
align = 1

[node name="Label_press_start" type="Label" parent="VBoxContainer3"]
visible = false
margin_right = 220.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="Label_insert_coin" type="Label" parent="VBoxContainer3"]
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer3"]
margin_top = 82.0
margin_right = 235.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer1" type="VBoxContainer" parent="."]
margin_left = 717.0
margin_right = 952.0
margin_bottom = 263.0
size_flags_horizontal = 3

[node name="Label_blank1" type="Label" parent="VBoxContainer1"]
visible = false
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_1" type="Label" parent="VBoxContainer1"]
margin_right = 235.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "player 1"
align = 1

[node name="Label_ready1" type="Label" parent="VBoxContainer1"]
visible = false
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ready!"
align = 1

[node name="Label_press_start" type="Label" parent="VBoxContainer1"]
visible = false
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="Label_insert_coin" type="Label" parent="VBoxContainer1"]
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer1"]
visible = false
margin_top = 41.0
margin_right = 222.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 956.0
margin_right = 1191.0
margin_bottom = 263.0
size_flags_horizontal = 3

[node name="Label_blank2" type="Label" parent="VBoxContainer2"]
visible = false
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_2" type="Label" parent="VBoxContainer2"]
margin_right = 235.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "player 2"
align = 1

[node name="Label_ready2" type="Label" parent="VBoxContainer2"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ready!"
align = 1

[node name="Label_press_start" type="Label" parent="VBoxContainer2"]
visible = false
margin_right = 220.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="Label_insert_coin" type="Label" parent="VBoxContainer2"]
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer2"]
visible = false
margin_top = 82.0
margin_right = 222.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 1195.0
margin_right = 1430.0
margin_bottom = 263.0
size_flags_horizontal = 3

[node name="Label_blank4" type="Label" parent="VBoxContainer4"]
visible = false
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_4" type="Label" parent="VBoxContainer4"]
margin_right = 235.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "player 4"
align = 1

[node name="Label_ready4" type="Label" parent="VBoxContainer4"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ready!"
align = 1

[node name="Label_press_start" type="Label" parent="VBoxContainer4"]
visible = false
margin_right = 220.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="Label_insert_coin" type="Label" parent="VBoxContainer4"]
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer4"]
margin_top = 82.0
margin_right = 235.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer6" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 1434.0
margin_right = 1669.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank6" type="Label" parent="VBoxContainer6"]
visible = false
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_6" type="Label" parent="VBoxContainer6"]
margin_right = 235.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "player 6"
align = 1

[node name="Label_ready6" type="Label" parent="VBoxContainer6"]
visible = false
margin_right = 240.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ready!"
align = 1

[node name="Label_press_start" type="Label" parent="VBoxContainer6"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="Label_insert_coin" type="Label" parent="VBoxContainer6"]
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer6"]
margin_top = 82.0
margin_right = 235.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer8" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 1673.0
margin_right = 1912.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank8" type="Label" parent="VBoxContainer8"]
visible = false
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_8" type="Label" parent="VBoxContainer8"]
margin_right = 239.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "player 8"
align = 1

[node name="Label_ready8" type="Label" parent="VBoxContainer8"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Ready!"
align = 1

[node name="Label_press_start" type="Label" parent="VBoxContainer8"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="Label_insert_coin" type="Label" parent="VBoxContainer8"]
margin_top = 41.0
margin_right = 239.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer8"]
margin_top = 82.0
margin_right = 239.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3
